--- a/trunk/unyo/shell/def/ForDevelopers/BACKUP_AUDIT_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/BACKUP_AUDIT_LOG_DEF_DB.cfg
@@ -26,7 +26,7 @@ C,F,D:\logfile\event,event_sec.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVRNL@@\log\
 #C,F,H:\DBFiles\bankrazb\adump,bankrazb_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
 #C,F,E:\CLlog\azbk\BANKRAZB\error,err.@@D0005@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\errors
 # Oracle 1.0ŽŸ ƒNƒ‰ƒXƒ^‘Î‰ž
-C,F,D:\unyolog\@@SVRNL@@\audit\listener,brccazbk_lsnr.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener
+C,F,D:\unyolog\@@SVRNL@@\audit\listener,azbk_lsnr.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\listener
 C,F,E:\CLlog\azbk\BANKRAZB\audit\opelog,ope_history.dump.*,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\opelog
 C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\audit\oracle\@@D0001@@
 C,F,F:\DBFiles\brccazbk\adump,brccazbk_*.xml,D:\unyolog\@@SVRNL@@\audit\oracle\@@D0001@@
