--- a/trunk/unyo/shell/def/ForDevelopers/BACKUP_OTHER_LOG_DEF_DB.cfg
+++ b/trunk/unyo/shell/def/ForDevelopers/BACKUP_OTHER_LOG_DEF_DB.cfg
@@ -16,7 +16,7 @@ C,F,D:\unyolog\@@SVRNL@@\log\unyo,error.log.@@D0001@@,${COM_NAS_BASE_DIRS}\@@SVR
 #-----------------------------------------------------------------------------------------------------------------------
 # サービスノード用
 #-----------------------------------------------------------------------------------------------------------------------
-C,F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbpw01\log\otherlog\oracle
+C,F,D:\unyolog\@@SVRNL@@\log\oracle,alert_brccazbk.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\oracle
 #C,F,D:\unyolog\@@SVRNL@@\log\oracle,alert_bankrazb.log.@@D0001@@,${COM_NAS_BASE_DIRS}\fcctbsdbdw01\log\otherlog\oracle
 #-----------------------------------------------------------------------------------------------------------------------
 # 2.Move
